Criação de request que valida os dados de um novo post um um post para ser atualizado
